--- a/SuperAdventure/SuperAdventure/App.xaml
+++ b/SuperAdventure/SuperAdventure/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SuperAdventure.App"
+﻿<Application x:Class="SuperAdventure_WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SuperAdventure"
+             xmlns:local="clr-namespace:SuperAdventure_WPF"
              StartupUri="UI/SuperAdventure.xaml">
     <Application.Resources>
          
