--- a/SuperAdventure/SuperAdventure/UI/SuperAdventure.xaml
+++ b/SuperAdventure/SuperAdventure/UI/SuperAdventure.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="SuperAdventure.UI.SuperAdventure"
+﻿<Window x:Class="SuperAdventure_WPF.UI.SuperAdventure"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SuperAdventure.UI"
+        xmlns:local="clr-namespace:SuperAdventure_WPF.UI"
         mc:Ignorable="d"
         Title="My Game" 
-        Height="700" Width="700">
+        Height="700" Width="700" Closing="Window_Closing">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
