--- a/SuperAdventure/SuperAdventure/UI/SuperAdventure.xaml
+++ b/SuperAdventure/SuperAdventure/UI/SuperAdventure.xaml
@@ -88,11 +88,23 @@
             <RichTextBox Grid.Row="0" 
                          Name="rtbLocation" 
                          IsReadOnly="True" 
-                         Margin="5"/>
+                         Margin="5">
+                <RichTextBox.Resources>
+                    <Style TargetType="{x:Type Paragraph}">
+                        <Setter Property="Margin" Value="0"/>
+                    </Style>
+                </RichTextBox.Resources>
+            </RichTextBox>
             <RichTextBox Grid.Row="1" 
                          Name="rtbMessages" 
                          IsReadOnly="True" 
-                         Margin="5"/>
+                         Margin="5">
+                <RichTextBox.Resources>
+                    <Style TargetType="{x:Type Paragraph}">
+                        <Setter Property="Margin" Value="0"/>
+                    </Style>
+                </RichTextBox.Resources>
+            </RichTextBox>
             <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
