--- a/SuperAdventure/SuperAdventure_WPF/UI/SuperAdventure.xaml
+++ b/SuperAdventure/SuperAdventure_WPF/UI/SuperAdventure.xaml
@@ -139,6 +139,12 @@
                         Name="btnSouth"
                         Content="South" 
                         Margin="5" Click="btnSouth_Click"/>
+                <Button Grid.Row="1"
+                        Grid.Column="2"
+                        Name="btnMap"
+                        Content="Map" 
+                        Margin="5" Click="btnMap_Click" />
+
             </Grid>
             <Grid Grid.Row="3" Margin="10" >
                 <Grid.RowDefinitions>
